Working master, based on debian:jessie now